--- a/css/about-us.css
+++ b/css/about-us.css
@@ -1,12 +1,11 @@
-
-html,body
-{
-    width: 100%;
-    min-height: 100%;
-    margin: 0px;
-    padding: 0px;
-    background-color: #FFFFFF;
-    overflow-x: hidden;
+html,
+body {
+  width: 100%;
+  min-height: 100%;
+  margin: 0px;
+  padding: 0px;
+  background-color: #ffffff;
+  overflow-x: hidden;
 }
 
 .team-banner-image {
@@ -16,10 +15,10 @@ html,body
 
 .about-us-description {
   font-size: 24px;
-  padding: 20px
+  padding: 20px;
 }
 
-.container-home-top{
+.container-home-top {
   margin-top: 30px;
   min-height: 80vh;
   font-size: 35px;
@@ -28,27 +27,27 @@ html,body
   padding-bottom: 40px;
   color: rgb(196, 196, 196);
 }
-.team-card{
+.team-card {
   position: relative;
   padding-bottom: 40px;
   margin-bottom: 50px;
 }
-.team-card>img{
+.team-card > img {
   width: 100%;
 }
-.my-auto > .col-md-4 > .team-card > img{
+.my-auto > .col-md-4 > .team-card > img {
   width: 70%;
 }
-.card-text{
-  width: 70% ;
-  background-color: #F2F9FF;
+.card-text {
+  width: 70%;
+  background-color: #f2f9ff;
   padding: 10px;
   right: auto;
   left: auto;
   margin-left: 70px;
   box-shadow: 0 5px 6px -6px #777;
 }
-.container-home-top>img{
+.container-home-top > img {
   max-width: 80px;
 }
 .founders-heading {
@@ -56,10 +55,10 @@ html,body
   font-size: 36px;
   font-weight: 600;
   color: #251a4a;
-  margin-top: 80px; 
+  margin-top: 80px;
   /* margin-bottom: 80px; */
 }
-.card-text-subheading{
+.card-text-subheading {
   padding-bottom: 10px;
 }
 .founders-image {
@@ -72,36 +71,36 @@ html,body
   /* margin-top: 40px; */
   margin-bottom: 0;
 }
-.card_linkedin{
+.card_linkedin {
   height: 30px !important;
 }
 
-.akash_card{
+.akash_card {
   margin-top: 18%;
 }
-.akash_card>img{
+.akash_card > img {
   padding: 25%;
   padding-bottom: 0;
 }
-.shail_card{
+.shail_card {
   margin-top: 13%;
 }
-.shail_card>img{
+.shail_card > img {
   padding: 20%;
   padding-bottom: 0;
 }
-.bharath_card{
+.bharath_card {
   margin-top: 17%;
 }
-.bharath_card>img{
+.bharath_card > img {
   padding: 23%;
   padding-bottom: 0;
 }
-.arpit_card{
-  margin-top: 4%; 
+.arpit_card {
+  margin-top: 4%;
 }
-.saif_card{
-  margin-top: 9%; 
+.saif_card {
+  margin-top: 9%;
 }
 
 .founder-designation {
@@ -148,28 +147,30 @@ html,body
 }
 
 .about-us-heading {
-  color: #1078F0 !important;
+  color: #1078f0 !important;
   font-family: Montserrat;
   font-size: 36px;
   font-weight: bold;
   margin-top: 70px;
 }
-.about-us-text-con{
+.about-us-text-con {
   min-width: 150vw;
   min-height: 600px;
   padding-top: 50px;
   margin-left: -25vw;
-  background: linear-gradient(0deg, rgba(201, 226, 255, 0.63) 0.35%, rgba(228, 244, 255, 0.001) 99.63%);
+  background: linear-gradient(
+    0deg,
+    rgba(201, 226, 255, 0.63) 0.35%,
+    rgba(228, 244, 255, 0.001) 99.63%
+  );
   padding-bottom: 100px;
-  border-bottom-left-radius:50%;
-  border-bottom-right-radius:50% ;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
 }
-.about-us-text-con>p{
+.about-us-text-con > p {
   padding-left: 40vw;
   padding-right: 40vw;
 }
-
-
 
 @media (max-width: 768px) {
   .about-us-heading {
@@ -207,5 +208,9 @@ html,body
 
   .bottom-card-founder {
     margin-bottom: 80px;
+  }
+  .foother-container {
+    padding: 0 !important;
+    /* margin: 0; */
   }
 }
